<resources>
    <string name="app_name">CalCounter</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">CalCounter</string>
    <string name="hint_food">What food did you eat?</string>
    <string name="hint_calories">Calories Count</string>
    <string name="btn_submit">Submit Calories</string>
    <string name="delete_item">Delete Item</string>
    <string name="share_title">Share</string>
    <string name="t_calories">Total Calories</string>
    <string name="cal_text">Cal..</string>
    <string name="f_items">Food Items:</string>
    <string name="title_activity_display_foods">DisplayFoodsActivity</string>
    <string name="separator">|</string>
    <string name="arrow">></string>
    <string name="title_activity_food_items_details">food_items_details</string>
    <string name="foodname">Food Name</string>
    <string name="calories_title">Calories</string>
    <string name="c_value">200</string>
    <string name="share">Share</string>
    <string name="consumed">Consumed On</string>
</resources>

