<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jere.calcounter.food_items_details"
    tools:showIn="@layout/activity_food_items_details">


    <ImageView
        android:id="@+id/detlogo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/apple"
        android:layout_width="180dp"
        android:layout_height="180dp" />
    <LinearLayout
        android:id="@+id/layout"
        android:background="@drawable/row_bg"
        android:layout_below="@id/detlogo"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detFoodName"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/foodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detCaloriesTitle"
            android:text="@string/calories_title"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detCaloriesValue"
            android:text="@string/c_value"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detCaloriesDate"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:text="@string/consumed"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/detbtnshare"
            android:text="@string/share"
            android:layout_gravity="right"
            android:background="@drawable/circle"
            android:layout_width="60dp"
            android:layout_height="60dp" />

    </LinearLayout>

</RelativeLayout>
