<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#cdf9b6"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jere.calcounter.DisplayFoodsActivity"
    tools:showIn="@layout/activity_display_foods">


    <LinearLayout
        android:id="@+id/linearlayout"
        android:background="#70f2f0"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/totalcalories"
            android:textStyle="bold"
            android:textColor="#ece9e9"
            android:layout_marginLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/t_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/separator"
            android:textStyle="bold"
            android:textColor="#c28787"
            android:textSize="27sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/fooditems"
            android:textStyle="bold"
            android:textColor="#060606"
            android:text="@string/f_items"
            android:layout_marginLeft="5dp"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/linearlayout"
        android:dividerHeight="2dp"
        android:divider="#212121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>

</RelativeLayout>
